--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -9,18 +9,16 @@
         <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     </head>
     <body>
-        <header>
-            <div class="logo"></div>
-        </header>
+        <header></header>
         <div class="container">
             <section class="filters">
                 <div class="locations">
                     <h3>States</h3>
-                    <h4>Fake content</h4>
+                    <h4>Riyadh, Jeddah</h4>
                 </div>
                 <div class="amenities">
                     <h3>Amenities</h3>
-                    <h4>Fake content</h4>
+                    <h4>Sun, Moon</h4>
                 </div>
                 <button>Search</button>
             </section>
